# docs/swagger.json
@@ -26,6 +26,17 @@
                     "auth"
                 ],
                 "summary": "Аутентификация пользователя",
+                "parameters": [
+                    {
+                        "description": "Учетные данные",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.AuthRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -61,9 +72,9 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Токен авторизации",
-                        "name": "token",
-                        "in": "path",
+                        "description": "Токен авторизации в формате Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -102,9 +113,9 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Токен авторизации",
-                        "name": "token",
-                        "in": "query",
+                        "description": "Токен авторизации в формате Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     },
                     {
@@ -168,6 +179,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Токен авторизации в формате Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Метаданные документа в формате JSON",
                         "name": "meta",
                         "in": "formData",
@@ -221,26 +239,20 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID документа",
-                        "name": "id",
-                        "in": "path",
+                        "description": "Токен авторизации в формате Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "Токен авторизации",
-                        "name": "token",
-                        "in": "query",
+                        "description": "ID документа",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/middleware.Response"
-                        }
-                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -279,16 +291,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID документа",
-                        "name": "id",
-                        "in": "path",
+                        "description": "Токен авторизации в формате Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "Токен авторизации",
-                        "name": "token",
-                        "in": "query",
+                        "description": "ID документа",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -393,6 +405,19 @@
                     "$ref": "#/definitions/middleware.ErrorResponse"
                 },
                 "response": {}
+            }
+        },
+        "model.AuthRequest": {
+            "type": "object",
+            "properties": {
+                "login": {
+                    "description": "User login\nrequired: true",
+                    "type": "string"
+                },
+                "pswd": {
+                    "description": "User password\nrequired: true",
+                    "type": "string"
+                }
             }
         },
         "model.RegisterRequest": {
